# QuotlyNative

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.hf  README.md
.github/workflows/: docker-publish.yml  release-binaries.yml
src/: api_handler.cpp  api_handler.h  main.cpp  renderer.cpp  renderer.h  style_constants.h  text_engine.cpp  text_engine.h  tg_client.cpp  tg_client.h
src/mtproto/: auth_key.cpp  auth_key.h  client.cpp  client.h  crypto.cpp  crypto.h  session.cpp  session.h  tl.cpp  tl.h  transport.cpp  transport.h
tests/: complex_test.json  crypto_smoke.cpp  test_payload.json  verify_api.py
